// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Popover does not render when the anchor is null 1`] = `null`;

exports[`Popover renders 1`] = `
<div>
  <div
    className="container"
    style={
      Object {
        "left": -10,
        "stroke": "#efefef",
        "top": NaN,
        "visibility": "visible",
      }
    }
  >
    <div
      className="rounding4 contents maxDimensions minDimensions"
      tabIndex={-1}
    >
      <div
        className="border whiteBgElevated whiteElevated rounding4 innerContents maxDimensions minDimensions"
        style={
          Object {
            "maxWidth": 230,
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Popover renders as blue 1`] = `
<div>
  <div
    className="container"
    style={
      Object {
        "left": -10,
        "stroke": null,
        "top": NaN,
        "visibility": "visible",
      }
    }
  >
    <div
      className="rounding4 contents maxDimensions minDimensions"
      tabIndex={-1}
    >
      <div
        className="border blueBg blue rounding4 innerContents maxDimensions minDimensions"
        style={
          Object {
            "maxWidth": 230,
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Popover renders as error 1`] = `
<div>
  <div
    className="container"
    style={
      Object {
        "left": -10,
        "stroke": null,
        "top": NaN,
        "visibility": "visible",
      }
    }
  >
    <div
      className="rounding4 contents maxDimensions minDimensions"
      tabIndex={-1}
    >
      <div
        className="border redBg red rounding4 innerContents maxDimensions minDimensions"
        style={
          Object {
            "maxWidth": 230,
          }
        }
      />
    </div>
  </div>
</div>
`;
